# nyt-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/nyt_mcp/: __init__.py  client.py  config.py  models.py  server.py
tests/: test_client.py  test_e2e.py  test_models.py
